z-index fix

--- a/Portfolio/assets/css/main.sass
+++ b/Portfolio/assets/css/main.sass
@@ -39,6 +39,7 @@ nav
   background-repeat: no-repeat
   background-color: rgba(0, 0, 0, 0.9)
   overflow: hidden
+  z-index: -1
 
 .curve
   position: absolute
